app.css
body {
    margin: 0;
    padding: 0;
    font-family: Roboto;
}


.nav-bar {

    background-color: #1f2937;
    display: flex;
    /* padding: 10px 0px; */
    padding: 10px 20% 20px;

}

.nav-bar a {
    color: #f9faf8;
    text-decoration: none;

}

.header-logo {
    display: flex;
    align-items: center;
    text-transform: capitalize;
    font-weight: 800;
    font-size: 24px;
}

.nav-links {
    display: flex;
    align-items: center;
    font-size: 18px;
    color: #E5E7EB;
    margin-left: auto;
}

.nav-links a {
    display: inline;
    margin-left: 10px;
}


/* MAIN SECTION  */


.top-container {
    display: flex;
    padding: 7% 20% 7% 20%;
    background-color: #1f2937;
    justify-content: center;
    gap: 10%;
}

.top-container h1 {
    margin: 0;
    font-size: 48px;
    font-weight: 800;
    color: #f9faf8;
}

.top-container p {
    font-size: 18px;
    color: #e5e7eb;
    /* margin: 10px 0 20px 0; */
    /* color for arrangement context */
    /* background-color: #df63c6; */
}

.main-title {
    width: 50%;
    /* background-color: purple; */
}

.main-image-container {
    /* color for arrangement context */
    width: 50%;
    height: 280px;
    /* color for arrangement context */
    /* background-color: #ff0000; */
    /* overflow: hidden; */
}

.main-image {
    flex-grow: 1;
    height: 100%;
    width: 100%;
    object-fit: cover;
    object-position: 50% 70%;
    /* color for arrangement context */
    /* background-color: #ff00ea; */
}

.cta-button-1 {
    border-style: none;
    border-radius: 5px;
    padding: 5px;
    /* height: 50%; */
    min-width: 90px;
    background-color: #3882f6;
    color: #f9faf8;
}



/* MID SECTION */



section h2 {
    margin: 0;
    text-align: center;
    font-size: 36px;
    font-weight: 800;
    color: #1f2937;
    padding: 40px 150px 40px;
}

.mid-container {
    padding: 0px 20% 70px 20%;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 40px;
    /* color for arrangement context */
    /* background-color: rgba(255, 0, 255, 0.321); */
}

.img-container {
    width: 150px;
    text-align: center;
    /* color and border for context/arrangement guides */
    /* background-color: purple; */
}

.mid-image {
    height: 140px;
    border: 3px solid #3882f6;
    border-radius: 10%;
}



/* QUOTE SECTION  */



.quote-container {
    background-color: #e5e7eb;
    padding: 5% 30% 5%;
    display: flex;
    flex-direction: column;
    gap: 10%;
}

.quote-container p {
    margin: 0;
}

.quote {
    font-size: 36px;
    font-weight: 100;
    font-style: italic;
    margin: 0 0 15px 0;
}

.credit {
    font-weight: bold;
    margin: 0 0 0 auto;
    /* color and border for context/arrangement guides */
    /* background-color: magenta; */
}


/* CALL TO ACTION SECTION  */

.offer p {
    margin: 0;
    padding: 0;
    color: #E5E7EB;
}

.offer h3 {
    margin: 0;
    color: #f9faf8;
}

.button-container button {
    border: 1px solid white;
    border-radius: 5px;
    padding: 5px;
    width: 100px;
    background-color: #3882f6;
    color: #f9faf8;
}

.call-to-action {
    /* width: 50%; */
    box-sizing: border-box;
    height: 100px;
    width: 900px;
    background-color: #3882f6;
    /* border: 2px solid magenta; */
    border-radius: 10px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    gap: 1em;
    /* flex-wrap: wrap; */
    /* align-content: flex-end; */
}

.cta-container {
    padding: 5% 15% 5% 15%;
    display: flex;
    justify-content: center;

}

footer {
    padding-top: 5px;
    text-align: center;
    width: 100%;
    height: 50px;
    color: #e5e7eb;
    background-color: #1f2937;

}

